2018-02-07  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.50 released.

2018-02-06  Carl Hetherington  <cth@carlh.net>

	* Fix problems with text subtitle files containing OS X line-endings.

	* Version 2.11.49 released.

2018-02-05  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.48 released.

2018-02-04  Carl Hetherington  <cth@carlh.net>

	* Allow main DCP-o-matic and batch converter to run on the same
	machine and both get access to encoding servers (#1190).

2018-02-03  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2018-02-02  Carl Hetherington  <cth@carlh.net>

	* Updated de_DE translation from Carsten Kurz.

2018-02-01  Carl Hetherington  <cth@carlh.net>

	* Don't try to use video streams for which we have no codec (#1184).

	* Updated sv_SE translation from Adam Klotblixt.

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.11.47 released.

2018-01-31  Carl Hetherington  <cth@carlh.net>

	* Disable things that cannot be altered when video/audio are being
	referenced from another DCP (#1173).

	* Version 2.11.46 released.

2018-01-30  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.45 released.

2018-01-18  Carl Hetherington  <cth@carlh.net>

	* Version 2.11.44 released.

2018-01-17  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Version 2.11.43 released.

2018-01-17  Carl Hetherington  <cth@carlh.net>

	* Add some more DCP information to the player (#1170).

	* Add recent files list to player (#1171).

2018-01-16  Carl Hetherington  <cth@carlh.net>

	* Allow configuration of default value of upload-to-TMS button.

2018-01-15  Carl Hetherington  <cth@carlh.net>

	* Updated cs_CZ translation from Tomáš Begeni.

	* Updated pt_BR translation from Max Fuhlendorf.

	* Version 2.11.42 released.

2018-01-14  Carl Hetherington  <cth@carlh.net>

	* Updated nl_NL translation from Rob van Nieuwkerk.

	* Updated de_DE translation from Carsten Kurz.
