@@ -1,3 +1,8 @@
+2018-02-08  Carl Hetherington  <cth@carlh.net>
+
+	* Fix crash on adding content to a project created from a template
+	in some cases (#1192).
+
 2018-02-07  Carl Hetherington  <cth@carlh.net>
 
 	* Version 2.11.50 released.
